# data-to-midi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: default.yaml  scales.yaml  stock_ambient.yaml
config/mappings/: stock_ambient.yaml  stock_basic.yaml
src/cam_to_midi/: __init__.py  __main__.py  app.py  config.py  pipeline.py
src/cam_to_midi/engine/: ambient_engine.py  base.py
src/cam_to_midi/mapping/: __init__.py  base.py  ml_mapper.py  musical_params.py  rule_based.py
src/cam_to_midi/perception/: __init__.py  base.py  features.py  multi_symbol.py  windowed.py
src/cam_to_midi/sources/: registry.py  stock.py
src/cam_to_midi/synth/: pygame_synth.py
src/cam_to_midi/ui/: console.py  web_server.py
src/cam_to_midi/web/static/: index.html
src/cam_to_midi/web/static/css/: style.css
src/cam_to_midi/web/static/js/: app.js  controls.js  instruments.js  (+1 more)
src/data_to_midi/: __init__.py  __main__.py  app.py  config.py
src/data_to_midi/engine/: engine.py  midi_out.py  sequencer.py  theory.py
src/data_to_midi/mapping/: ml_mapper.py  musical_params.py  registry.py  rule_based.py
src/data_to_midi/perception/: extractors.py  features.py
src/data_to_midi/sources/: __init__.py  base.py  random_walk.py  stock.py
src/data_to_midi/synth/: __init__.py  base.py  fluidsynth_backend.py  registry.py
src/data_to_midi/ui/: console.py  web_server.py
src/data_to_midi/web/static/: index.html
tests/: conftest.py  test_ambient_engine.py  test_config.py  test_engine.py  test_mapping.py  test_perception.py  test_pipeline.py  test_sources.py  test_theory.py
(+4 files in other folders)
